# gitdash

./: Justfile  README.md  lefthook.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-checks.yml  sync-labels.yml
docs/: SECURITY.md
src/: run.py
